@@ -409,8 +409,6 @@ LIBRPM_0
     tarTrailerWrite;
     XrpmpsmLink;
     XrpmpsmUnlink;
-    XrpmsxLink;
-    XrpmsxUnlink;
     XrpmtsiFree;
     XrpmtsiInit;
     XrpmtsLink;
